:heavy_check_mark: Сборка #2

--- a/2/index.html
+++ b/2/index.html
@@ -42,7 +42,7 @@
     <main class="main-container">
       <h1 class="visually-hidden">Cat energy - магазин функционального питания для котов</h1>
 
-      <seciton class="nutrition-program">
+      <section class="nutrition-program">
         <div class="nutrition-program-wrapper">
           <h2 class="nutrition-program__title">Функциональное
             питание для котов</h2>
@@ -54,7 +54,7 @@
             Подобрать программу
           </a>
         </div>
-      </seciton>
+      </section>
 
       <section class="food-kits">
         <div class="food-kits-wrapper">
@@ -170,37 +170,36 @@
 
         </div>
       </section>
-
-      <footer class="main-footer">
-        <div class="main-footer">
-          <a class="main-footer__logo" href="#">
-            <img class="main-footer__logo-image" src="img/footer-logo.svg" width="128" height="24" alt="Интернет-магазин «Кэт энерджи»">
-          </a>
-
-          <ul class="main-footer__social social">
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Мы в Вконтакте</span>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Мы в Ютубе</span>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Мы в Телеграме</span>
-              </a>
-            </li>
-          </ul>
-          
-          <a class="main-footer__copyright copyright" href="#">
-            <span class="copyright__title">HTML Academy</span>
-            <img class="copyright-logo-image" src="img/html-academy-logo.svg" width="27" height="34" alt="HTML Academy">
-          </a>
-        </div>
-      </footer>
     </main>
+    <footer class="main-footer">
+      <div class="main-footer">
+        <a class="main-footer__logo" href="#">
+          <img class="main-footer__logo-image" src="img/footer-logo.svg" width="128" height="24" alt="Интернет-магазин «Кэт энерджи»">
+        </a>
+
+        <ul class="main-footer__social social">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Мы в Ютубе</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Мы в Телеграме</span>
+            </a>
+          </li>
+        </ul>
+        
+        <a class="main-footer__copyright copyright" href="#">
+          <span class="copyright__title">HTML Academy</span>
+          <img class="copyright-logo-image" src="img/html-academy-logo.svg" width="27" height="34" alt="HTML Academy">
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
