--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
         alt="Интернет-магазин «Кэт энерджи»">
         <img class="main-header__logo-text-image" src="img/logo-text.svg" width="118" height="18" alt="Cat energy">
       </a>
-      <nav class="main-nav">
+      <nav class="main-header__nav main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -42,7 +42,7 @@
       <h1 class="visually-hidden">Cat energy - магазин функционального питания для котов</h1>
 
       <section class="nutrition-program">
-        <div class="nutrition-program-wrapper">
+        <div class="nutrition-program__wrapper">
           <h2 class="nutrition-program__title">Функциональное
             питание для котов</h2>
           <p class="nutrition-program__slogan">
@@ -56,7 +56,7 @@
       </section>
 
       <section class="food-kits">
-        <div class="food-kits-wrapper">
+        <div class="food-kits__wrapper">
           <h2 class="visually-hidden">Продукты питания для разных целей</h2>
           <ul class="food-kits__list">
             <li class="food-kits__item food-kits__item--slim-kit">
@@ -88,7 +88,7 @@
       </section>
 
       <section class="benefit-reasons">
-        <div class="benefit-reasons-wrapper">
+        <div class="benefit-reasons__wrapper">
           <h2 class="benefit-reasons__title">Как это работает</h2>
           <ul class="benefit-reasons__list reasons-list">
             <li class="reasons-list__item reasons-list__item--reason-1">
@@ -126,7 +126,7 @@
       </section>
 
       <section class="nutrition-program-result">
-        <div class="nutrition-program-result-wrapper">
+        <div class="nutrition-program-result__wrapper">
           <div class="nutrition-program-result__description">
             <h2 class="nutrition-program-result__title">Живой пример</h2>
             <p class="nutrition-program-result__story">
@@ -171,7 +171,7 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="main-footer">
+      <div class="main-footer__wrapper">
         <a class="main-footer__logo" href="#">
           <img class="main-footer__logo-image" src="img/footer-logo.svg" width="128" height="24" alt="Интернет-магазин «Кэт энерджи»">
         </a>
@@ -196,7 +196,7 @@
         
         <a class="main-footer__copyright copyright" href="#">
           <span class="copyright__title">HTML Academy</span>
-          <img class="copyright-logo-image" src="img/html-academy-logo.svg" width="27" height="34" alt="HTML Academy">
+          <img class="copyright__logo-image" src="img/html-academy-logo.svg" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </footer>
