--- a/source/index.html
+++ b/source/index.html
@@ -49,7 +49,7 @@
             Занялся собой? Займись котом!
           </p>
 
-          <a class="nutrition-program__button button-program" href="#">
+          <a class="nutrition-program__button button" href="#">
             Подобрать программу
           </a>
         </div>
@@ -62,9 +62,9 @@
             <li class="food-kits__item food-kits__item--slim-kit">
               <h3 class="food-kits__title">Похудение</h3>
               <p class="food-kits__description">
-                Ваш кот весит больше собаки и почти утратил 
-                способность лазить по деревьям? Пора на диету! 
-                Cat Energy Slim поможет вашему питомцу сбросить 
+                Ваш кот весит больше собаки и почти утратил
+                способность лазить по деревьям? Пора на диету!
+                Cat Energy Slim поможет вашему питомцу сбросить
                 лишний вес.
               </p>
               <a class="food-kits__link" href="#">
@@ -75,8 +75,8 @@
             <li class="food-kits__item food-kits__item--pro-kit">
               <h3 class="food-kits__title">Набор массы</h3>
               <p class="food-kits__description">
-                Заработать авторитет среди дворовых котов и даже собак? 
-                Серия Cat Energy Pro поможет вашему коту нарастить 
+                Заработать авторитет среди дворовых котов и даже собак?
+                Серия Cat Energy Pro поможет вашему коту нарастить
                 необходимые мышцы!
               </p>
               <a class="food-kits__link" href="#">
@@ -98,26 +98,26 @@
                 питательные вещества.
               </p>
             </li>
-  
+
             <li class="reasons-list__item reasons-list__item--reason-2">
               <p class="reasons-list__reason-description">
-                Выпускается в виде порошка, 
-                который нужно лишь залить 
+                Выпускается в виде порошка,
+                который нужно лишь залить
                 кипятком и готово.
               </p>
             </li>
-  
+
             <li class="reasons-list__item reasons-list__item--reason-3">
               <p class="reasons-list__reason-description">
-                Замените один-два приема 
-                обычной еды на наше 
+                Замените один-два приема
+                обычной еды на наше
                 функциональное питание.
               </p>
             </li>
-  
+
             <li class="reasons-list__item reasons-list__item--reason-4">
               <p class="reasons-list__reason-description">
-                Уже через месяц наслаждайтесь изменениями к 
+                Уже через месяц наслаждайтесь изменениями к
                 лучшему вашего питомца!
               </p>
             </li>
@@ -130,9 +130,9 @@
           <div class="nutrition-program-result__description">
             <h2 class="nutrition-program-result__title">Живой пример</h2>
             <p class="nutrition-program-result__story">
-              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. 
-              Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек 
-              и по-прежнему спит по 16 часов в день. 
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+              Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек
+              и по-прежнему спит по 16 часов в день.
             </p>
             <dl class="nutrition-program-result__list stats-list">
               <dt class="stats-list__number">5 КГ</dt>
@@ -143,7 +143,7 @@
             </dl>
 
             <p class="nutrition-program-result__total-price">
-              Затраты на питание: 15 000 РУБ. 
+              Затраты на питание: 15 000 РУБ.
             </p>
           </div>
 
@@ -193,7 +193,7 @@
             </a>
           </li>
         </ul>
-        
+
         <a class="main-footer__copyright copyright" href="#">
           <span class="copyright__title">HTML Academy</span>
           <img class="copyright__logo-image" src="img/html-academy-logo.svg" width="27" height="34" alt="HTML Academy">
