--- a/source/form.html
+++ b/source/form.html
@@ -2,23 +2,24 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Подбор программы Кэт энерджи</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="main-header">
       <nav class="main-header__nav main-nav">
-        <a class="main-nav__logo logo-header" href="index.html">
-          <img class="logo-header__logo-image" src="img/logo-mobile.svg" width="34" height="38"
-          alt="Интернет-магазин «Кэт энерджи»">
-          <img class="logo-header__logo-text-image" src="img/logo-text.svg" width="118" height="18" alt="Cat energy">
-        </a>
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
         <div class="main-nav__wrapper">
+          <a class="main-nav__logo logo-header" href="index.html">
+            <img class="logo-header__logo-image" src="img/logo-mobile.svg" width="34" height="38"
+            alt="Интернет-магазин «Кэт энерджи»">
+            <img class="logo-header__logo-text-image" src="img/logo-text.svg" width="118" height="18" alt="Cat energy">
+          </a>
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item">
+            <li class="site-list__item">
               <a class="site-list__link" href="index.html">
                 Главная
               </a>
@@ -47,55 +48,59 @@
           </p>
 
           <form class="program-selection__form selection-form" action="https://echo.htmlacademy.ru/" method="get">
-            <fieldset class="selection-form__group">
-              <legend class="visually-hidden">Информация о коте</legend>
-              <label class="selection-form__field">
-                <span class="selection-form__field-label">Имя:*</span>
-                <input class="selection-form__field-control input" type="text" name="selection-form-cat-name" placeholder="Барсик">
-              </label>
-              <label class="selection-form__field">
-                <span class="selection-form__field-label">Вес (кг):*</span>
-                <input class="selection-form__field-control input" type="number" name="selection-form-cat-weight" placeholder="7">
-              </label>
+            <div class="selection-form__wrapper">
+              <fieldset class="selection-form__group">
+                <legend class="visually-hidden">Информация о коте</legend>
+                <label class="selection-form__field">
+                  <span class="selection-form__field-label">Имя:*</span>
+                  <input class="selection-form__field-control input" type="text" name="selection-form-cat-name" placeholder="Барсик">
+                </label>
+                <label class="selection-form__field">
+                  <span class="selection-form__field-label">Вес (кг):*</span>
+                  <input class="selection-form__field-control input" type="number" name="selection-form-cat-weight" placeholder="7">
+                </label>
 
-              <label class="selection-form__field">
-                <span class="selection-form__field-label">Возраст (лет):*</span>
-                <input class="selection-form__field-control input" type="number" name="selection-form-cat-weight" placeholder="7">
-              </label>
-            </fieldset>
-            <fieldset class="selection-form__group">
-              <legend class="visually-hidden">Выбор цели</legend>
-              <ul class="selection-form__list">
-                <li class="selection-form__item selection-form__item--radio">
-                  <label class="selection-form__radio">
-                    <input class="selection-form__radio-input radio-input" type="radio" name="selection-form-radio" value="weight-loss" checked>
-                    <span class="selection-form__radio-label">Похудение</span>
-                  </label>
-                </li>
-                <li class="selection-form__item selection-form__item--radio">
-                  <label class="selection-form__radio">
-                    <input class="selection-form__radio-input radio-input" type="radio" name="selection-form-radio" value="weight-gain">
-                    <span class="selection-form__radio-label">Набор массы</span>
-                  </label>
-                </li>
-                <li class="selection-form__item selection-form__item--radio">
-                  <label class="selection-form__radio">
-                    <input class="selection-form__radio-input radio-input" type="radio" name="selection-form-radio" value="help">
-                    <span class="selection-form__radio-label">Не знаю (Нужен ваш совет)</span>
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="selection-form__group">
+                <label class="selection-form__field">
+                  <span class="selection-form__field-label">Возраст (лет):*</span>
+                  <input class="selection-form__field-control input" type="number" name="selection-form-cat-weight" placeholder="7">
+                </label>
+              </fieldset>
+              <fieldset class="selection-form__group">
+                <legend class="visually-hidden">Выбор цели</legend>
+                <ul class="selection-form__list">
+                  <li class="selection-form__item selection-form__item--radio">
+                    <label class="selection-form__radio">
+                      <input class="selection-form__radio-input radio-input" type="radio" name="selection-form-radio" value="weight-loss" checked>
+                      <span class="selection-form__radio-label">Похудение</span>
+                    </label>
+                  </li>
+                  <li class="selection-form__item selection-form__item--radio">
+                    <label class="selection-form__radio">
+                      <input class="selection-form__radio-input radio-input" type="radio" name="selection-form-radio" value="weight-gain">
+                      <span class="selection-form__radio-label">Набор массы</span>
+                    </label>
+                  </li>
+                  <li class="selection-form__item selection-form__item--radio">
+                    <label class="selection-form__radio">
+                      <input class="selection-form__radio-input radio-input" type="radio" name="selection-form-radio" value="help">
+                      <span class="selection-form__radio-label">Не знаю (Нужен ваш совет)</span>
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+            </div>
+            <fieldset class="selection-form__group selection-form__group">
               <legend class="selection-form__title">Контактные данные (владельца кота)</legend>
-              <label class="selection-form__field">
-                <span class="selection-form__field-label">E-mail:*</span>
-                <input class="selection-form__field-control input" type="email" name="selection-form-e-mail" placeholder="kuklachev@gmail.com">
-              </label>
-              <label class="selection-form__field">
-                <span class="selection-form__field-label">Телефон:*</span>
-                <input class="selection-form__field-control input" type="tel" name="selection-form-phone" placeholder="8 (960) 900-60-90">
-              </label>
+              <div class="selection-form__contacts-wrapper">
+                <label class="selection-form__field">
+                  <span class="selection-form__field-label">E-mail:*</span>
+                  <input class="selection-form__field-control input" type="email" name="selection-form-e-mail" placeholder="kuklachev@gmail.com">
+                </label>
+                <label class="selection-form__field">
+                  <span class="selection-form__field-label">Телефон:*</span>
+                  <input class="selection-form__field-control input" type="tel" name="selection-form-phone" placeholder="8 (960) 900-60-90">
+                </label>
+              </div>
             </fieldset>
             <fieldset class="selection-form__group">
               <legend class="selection-form__title">Комментарий</legend>
@@ -103,7 +108,7 @@
             </fieldset>
             <fieldset class="selection-form__group">
               <legend class="selection-form__title">Дополнительно</legend>
-              <ul class="selection-form__list">
+              <ul class="selection-form__list selection-form__list--addition">
                 <li class="selection-form__item selection-form__item--checkbox">
                   <label class="selection-form__checkbox">
                     <input class="selection-form__checkbox-input checkbox-input" type="checkbox" name="sweetener" checked>
@@ -136,18 +141,20 @@
         </div>
       </section>
       <section class="invitation">
-        <div class="invitation__location">
-          <h2 class="invitation__title">Приглашаем к сотрудничеству дилеров!</h2>
-          <address class="invitation__address">
-            <p class="invitation__street">
-              ул. Большая Конюшенная, д. 19/8
-            </p>
-            <p class="invitation__city">
-              Санкт-Петербург
-            </p>
-          </address>
-        </div>
-        <div class="invitation__map map">
+        <div class="invitation__wrapper">
+          <div class="invitation__location">
+            <h2 class="invitation__title">Приглашаем к сотрудничеству дилеров!</h2>
+            <address class="invitation__address">
+              <p class="invitation__street">
+                ул. Большая Конюшенная, д. 19/8
+              </p>
+              <p class="invitation__city">
+                Санкт-Петербург
+              </p>
+            </address>
+          </div>
+          <div class="invitation__map map">
+          </div>
         </div>
       </section>
     </main>
